# python-start-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
