[tool.poetry]
name = "graphene-start"
version = "0.1.0"
description = ""
authors = ["Luis Guilherme de Souza Munhoz <luisguilherme.sm@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.0"
flake8-pyproject = "^1.2.3"
black = "^23.11.0"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.3"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
no_implicit_optional = true
no_implicit_reexport = true
files= ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=graphene_start", "--cov-report=term-missing"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
